2012-02-03 Guido Scholz <guido.scholz@bayernline.de>
	* src/main.cpp: Remove obsolete commandline option -l (preset file).
	Add commandline option for program version (--version).
	* src/mainwindow.*, src/ladspadialog.cpp, src/synthdata.cpp: Enable
	"--verbose" commandline option to make startup more quiet.

2012-02-02 Guido Scholz <guido.scholz@bayernline.de>
	* src/main.cpp: Reorganize commandline options for input and output to
	be valid for Alsa and JACK.

2012-02-01 Guido Scholz <guido.scholz@bayernline.de>
	* configure.ac, src/synthdata.*: Add support for libzita-alsa-pcmi
	 as an alternative for libclalsadrv.

2012-01-31 Guido Scholz <guido.scholz@bayernline.de>
	* src/mainwindow.*, src/modularsynth.*, src/prefwidget.*:
	Rewrite preferences widget to fix colorwidget memory leak and
	use OOP style for data access. Realize choices for MIDI and editing
	options with RadioButtons. Add options for saving window geometry
	and hiding recently used files menu. Remove path edit lines;
	this feature is handled automatically.
	* src/m_lfo.cpp: Fix triggered reset of LFO saw signals; patch
	provided by Bill Yerazunis.


2012-01-30 Guido Scholz <guido.scholz@bayernline.de>
	* src/mainwindow.cpp:
	Fix broken Yes/No/Cancel response on program exit.

2012-01-26 Guido Scholz <guido.scholz@bayernline.de>
	* src/modularsynth.*, src/module.cpp, src/prefwidget.*:
	Fix preferences dialog to show current color setup.

2012-01-23 Guido Scholz <guido.scholz@bayernline.de>
	* src/modularsynth.*, src/prefwidget.*, src/synthdata.*,
	src/mainwindow.*, src/main.cpp, src/msoptions.h, src/Makefile.am:
	Add basic support for JACK session handling.
	* src/prefwidget.cpp: Improve widget alignment in preferences
	dialog.

2012-01-21 Guido Scholz <guido.scholz@bayernline.de>
	* configure.ac: Add check for ladspa.h, check for dlopen in
	libdl.
	* src/Makefile.am: Improve handling of CXXFLAGS variables.
	* src/modularsynth.cpp: Apply patch from Sebastien Alaiwan to